migrate to mojmap and make stuff up